# english-three

./: .env.example  .gitignore  AGENTS.md  index.html  package-lock.json  package.json  render.yaml  vite.config.js
.trae/rules/: superpowers-bootstrap.md  superpowers-trae-tools.md
agent/: .dockerignore  .env.example  Dockerfile  _check_env.py  _deerflow_real_test.py  _df_direct.ps1  _df_real_test.ps1  _df_test.py  _df_test_v3.py  _df_v4.py  _df_v5.py  _start_tutor.bat  _start_tutor.ps1  _test_shell.ps1  config.yaml  docker-entrypoint.sh  docker_gen_config.py  pyproject.toml  start_tutor_dev.py  start_tutor_real.py  supabase_migration.sql  supabase_migration_tutor.sql  test_api_call.py  test_llm.py
agent/agent_english/: __init__.py  config.py  main.py
agent/agent_english/adapters/: supabase.py
agent/agent_english/analyzers/: difficulty.py  progress.py
agent/agent_english/strategies/: content_selector.py  level_adjuster.py
agent/agent_english/tutor/: __init__.py  api.py  llm.py  models.py  prompt.py  service.py  session_store.py  supabase_session_store.py  tools.py
agent/tests/: test_core.py  test_tutor_api.py  test_tutor_prompt.py  test_tutor_service.py  test_tutor_session.py  test_tutor_tools.py
docs/: DEPLOY.md  DEVELOPMENT.md  PETS3-grammar-points.md  SUPABASE_MIGRATION.md
scripts/: seed-supabase.mjs
scripts/data/: grammar.json  listening.json  reading.json  speaking.json  vocabulary.json  writing.json
specs/rules/: 01-architecture-and-structure.md  02-build-and-run.md  03-data-and-configuration.md
src/: App.jsx  index.css  main.jsx
(+95 files in other folders)
